examples/test/testpolicy11843.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11843
  namespace: namespace298
spec:
  podSelector:
    matchLabels:
      key8: value43
      key23: value36
      key42: value7
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key14: value5
          key4: value44
      podSelector:
        matchLabels:
          key1: value42
          key46: value10
